--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ compiled/
 .\#*
 instructor/l01/~$110-intro.pptx
 lectures/~$m12-wrap.pptx
+instructor/l18/~$l18-pad.pptx
+instructor/l19/~$l19-20-pad.pptx
